# glance

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  release-please-config.json  todo.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml  release-wheel.yml
.ressources/: compare_sbom.py
docs/: index.md  win-cpe-msrc-alignment.md
docs/extending/: cataloger.md  classifier.md  cpe-entry.md
docs/internals/: architecture.md  classifiers.md  ecosystem.md  windows.md
docs/usage/: catalogers.md  cli.md  config.md  library.md  outputs.md
glance/: __init__.py  __main__.py  _glob.py  cli.py  config.py  correlate.py  default_config.yaml  default_updatedb.conf  models.py
glance/catalogers/: __init__.py  _distro.py  apk.py  dpkg.py  gobinary.py  registry.py  rpm.py  win_binary.py
glance/catalogers/binary/: __init__.py  cataloger.py  classifiers.py  matchers.py
glance/catalogers/custom/: dotnet.py  mssql.py
glance/catalogers/ecosystem/: __init__.py  base.py  distinfo.py  gem.py  gem_installed.py  (+7 more)
glance/classifiers/: linux_binary.py  linux_binary_data.py  win_binary_data.py  win_binary_index.yaml  win_registry_data.py  win_registry_index.yaml
glance/data/: default_config.yaml  win_cpe_index.yaml
glance/discovery/: __init__.py  containers.py  engines.py  gate.py  index.py  mft.py  walk.py
glance/output/: __init__.py  cyclonedx.py  minimal.py  native.py  report.py
tests/: test_binary_cataloger.py  test_classifiers_real_snippets.py  test_correlate.py  test_discovery.py  test_ecosystem_catalogers.py  test_engines.py  test_glob.py  test_gobinary.py  test_loader.py  test_matchers.py  test_output_and_config.py  test_packages.py  test_registry_cataloger.py  test_win_binary_cataloger.py
(+2 files in other folders)
